[tool.poetry]
name = "torchcps"
version = "0.1.0"
description = "Tools for deep learning on cyber-physical systems."
authors = ["Damian Owerko <Damowerko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytorch-lightning = "^2.2.1"
torch = "2.1.*"
torch-geometric = "^2.4.0"
pyg-lib = "^0.3.1"
torch-scatter = "^2.1.2"
torch-sparse = "^0.6.18"
torch-cluster = "^1.6.3"
torch-spline-conv = "^1.2.2"
numpy = "^1.25.1"
pykeops = "^2.2"
tqdm = "4.*"
pandas = "2.*"
scipy = "1.*"
scikit-learn = "^1.3.0"
cartopy = "^0.23.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pytest = "^8.1.1"
jupyter = "^1.0.0"
black = "^24.3.0"
ipympl = "^0.9.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cu121.html"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
