[project]
name = "torchcps"
version = "0.1.0"
description = "Tools for deep learning on cyber-physical systems."
authors = [{name="Damian Owerko", email="damowerko@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "lightning (>=2.5.0,<2.6.0)",
    "torch (>=2.5.0,<2.6.0)",
    "torch-geometric (>=2.6.1,<2.7.0)",
    "numpy (>=1.25.1,<1.26.0)",
    "tqdm (>=4.0.0,<5.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "scipy (>=1.0.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<1.4.0)",
    "cartopy (>=0.23.0,<0.24.0)",
    "wandb (>=0.19.7,<0.20.0)"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pytest = "^8.1.1"
jupyter = "^1.0.0"
black = "^24.3.0"
ipympl = "^0.9.3"

[tool.poetry.group.kernel]
optional = true

[tool.poetry.group.kernel.dependencies]
pykeops = "^2.2"

[tool.poetry.group.pyglib]
optional = true

[tool.poetry.group.pyglib.dependencies]
pyg-lib = "^0.4.0+pt25cu124"
torch-scatter = "^2.1.2+pt25cu124"
torch-sparse = "^0.6.18+pt25cu124"
torch-cluster = "^1.6.3+pt25cu124"
torch-spline-conv = "^1.2.2+pt25cu124"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.5.0+cu124.html"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"